Polestar_aufnahmen_added

--- a/Anwendung.html
+++ b/Anwendung.html
@@ -23,7 +23,7 @@
         <tr>
             <td>Fahrzeug einschalten</td>
             <td><button type="button" id="FZ_einschalten_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="FZ_einschalten_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
@@ -37,49 +37,49 @@
         <tr>
             <td>Tippen</td>
             <td><button type="button" id="tippen_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="tippen_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Beschleunigung und Bremsung</td>
             <td><button type="button" id="beschleunigung_bremsung_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="beschleunigung_bremsung_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Blinker</td>
             <td><button type="button" id="blinker_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="blinker_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Sprachassistent</td>
             <td><button type="button" id="sprachassistent_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="sprachassistent_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Anschallen</td>
             <td><button type="button" id="anschnallen_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="anschnallen_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Parksensor vorne</td>
             <td><button type="button" id="parksensorV_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="parksensorV_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Parksensor hinten</td>
             <td><button type="button" id="parksensorH_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="parksensorH_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
@@ -107,14 +107,14 @@
         <tr>
             <td>Benachrichtigung</td>
             <td><button type="button" id="benachrichtigung_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="benachrichtigung_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>Anruf</td>
             <td><button type="button" id="anruf_IONIQ6"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="anruf_Polestar2"> <span>▶ Play</span></button></td>
             <td></td>
             <td></td>
         </tr>
