EQE_Sounds_added

--- a/Anwendung.html
+++ b/Anwendung.html
@@ -15,8 +15,8 @@
             <th></th>
             <th>Hyundai IONIQ 6</th>
             <th>Polestar 2</th>
-            <th>Tesla Model</th>
-            <th>Letztes Modell</th>
+            <th>EQE</th>
+            <th>Tesla Model 3</th>
         </tr>
        </thead>
        <tbody>
@@ -24,119 +24,161 @@
             <td>Fahrzeug einschalten</td>
             <td><button type="button" id="FZ_einschalten_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="FZ_einschalten_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="FZ_einschalten_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Fahrzeug ausschalten</td>
             <td><button type="button" id="FZ_ausschalten_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td><button type="button" id="FZ_ausschalten_EQE"> <span>▶ Play</span></td>
             <td></td>
         </tr>
         <tr>
-            <td>Tippen</td>
+            <td>Interface: Tippen</td>
             <td><button type="button" id="tippen_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="tippen_Polestar2"> <span>▶ Play</span></button></td>
+            <td><button type="button" id="tippen_EQE"> <span>▶ Play</span></button></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Interface: Scrollen</td>
+            <td>-</td>
+            <td>-</td>
+            <td><button type="button" id="scrollen_EQE"> <span>▶ Play</span></button></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Interface: Scrollen Unternavigation</td>
+            <td>-</td>
+            <td>-</td>
+            <td><button type="button" id="scrollen_Unternavigation_EQE"> <span>▶ Play</span></button></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Interface: Toggle</td>
+            <td>-</td>
+            <td>-</td>
+            <td><button type="button" id="toggle_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Beschleunigung und Bremsung</td>
             <td><button type="button" id="beschleunigung_bremsung_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="beschleunigung_bremsung_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="beschleunigung_bremsung_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Blinker</td>
             <td><button type="button" id="blinker_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="blinker_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="blinker_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
-            <td>Sprachassistent</td>
+            <td>Sprachassistent aktivieren</td>
             <td><button type="button" id="sprachassistent_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="sprachassistent_Polestar2"> <span>▶ Play</span></button></td>
+            <td><button type="button" id="sprachassistent_EQE"> <span>▶ Play</span></button></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Sprachassistent deaktivieren</td>
+            <td><button type="button" id="sprachassistent_aus_IONIQ6"> <span>▶ Play</span></button></td>
+            <td><button type="button" id="sprachassistent_aus_Polestar2"> <span>▶ Play</span></button></td>
+            <td><button type="button" id="sprachassistent_aus_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Anschallen</td>
             <td><button type="button" id="anschnallen_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anschnallen_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="anschnallen_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Parksensor vorne</td>
             <td><button type="button" id="parksensorV_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="parksensorV_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="parksensorV_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Parksensor hinten</td>
             <td><button type="button" id="parksensorH_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="parksensorH_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="parksensorH_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Rückwärtsgang einlegen</td>
             <td><button type="button" id="RWG_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td>-</td>
             <td></td>
         </tr>
         <tr>
             <td>P einlegen</td>
             <td><button type="button" id="P_einlegen_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td>-</td>
             <td></td>
         </tr>
         <tr>
             <td>Offene Türe</td>
             <td><button type="button" id="offeneTuere_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td><button type="button" id="offeneTuere_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Benachrichtigung</td>
             <td><button type="button" id="benachrichtigung_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="benachrichtigung_Polestar2"> <span>▶ Play</span></button></td>
+            <td><button type="button" id="benachrichtigung_EQE"> <span>▶ Play</span></button></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Meldung</td>
+            <td>-</td>
+            <td>-</td>
+            <td><button type="button" id="meldung_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Anruf</td>
             <td><button type="button" id="anruf_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anruf_Polestar2"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="anruf_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Tempolimit überschreiten</td>
             <td><button type="button" id="tempolimit_ueberschritten_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
+            <td><button type="button" id="tempolimit_ueberschritten_EQE"> <span>▶ Play</span></button></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Einsteigen</td>
+            <td>-</td>
+            <td>-</td>
+            <td><button type="button" id="einsteigen_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Aussteigen</td>
             <td><button type="button" id="aussteigen_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td><button type="button" id="aussteigen_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
             <td>Kofferraum schließen</td>
             <td><button type="button" id="kofferraum_schliessen_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
-            <td></td>
+            <td>-</td>
             <td></td>
         </tr>
        </tbody>
