--- a/Anwendung.html
+++ b/Anwendung.html
@@ -67,7 +67,7 @@
             <td><button type="button" id="beschleunigung_bremsung_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="beschleunigung_bremsung_Polestar2"> <span>▶ Play</span></button></td>
             <td><button type="button" id="beschleunigung_bremsung_EQE"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="beschleunigung_bremsung_Model3"> <span>▶ Play</span></button></td>
         </tr>
         <tr>
             <td>Blinker</td>
@@ -95,7 +95,7 @@
             <td><button type="button" id="anschnallen_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anschnallen_Polestar2"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anschnallen_EQE"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="anschnallen_Model3"> <span>▶ Play</span></button></td>
         </tr>
         <tr>
             <td>Parksensor vorne</td>
@@ -158,7 +158,7 @@
             <td><button type="button" id="tempolimit_ueberschritten_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
             <td><button type="button" id="tempolimit_ueberschritten_EQE"> <span>▶ Play</span></button></td>
-            <td></td>
+            <td><button type="button" id="tempolimit_ueberschritten_Model3"> <span>▶ Play</span></button></td>
         </tr>
         <tr>
             <td>Einsteigen</td>
