--- a/Anwendung.html
+++ b/Anwendung.html
@@ -16,7 +16,7 @@
             <th>Hyundai IONIQ 6</th>
             <th>Polestar 2</th>
             <th>EQE</th>
-            <th>Tesla Model 3</th>
+            <th>Eigene Lösung</th>
         </tr>
        </thead>
        <tbody>
@@ -67,7 +67,7 @@
             <td><button type="button" id="beschleunigung_bremsung_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="beschleunigung_bremsung_Polestar2"> <span>▶ Play</span></button></td>
             <td><button type="button" id="beschleunigung_bremsung_EQE"> <span>▶ Play</span></button></td>
-            <td><button type="button" id="beschleunigung_bremsung_Model3"> <span>▶ Play</span></button></td>
+            <td></td>
         </tr>
         <tr>
             <td>Blinker</td>
@@ -95,7 +95,7 @@
             <td><button type="button" id="anschnallen_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anschnallen_Polestar2"> <span>▶ Play</span></button></td>
             <td><button type="button" id="anschnallen_EQE"> <span>▶ Play</span></button></td>
-            <td><button type="button" id="anschnallen_Model3"> <span>▶ Play</span></button></td>
+            <td></td>
         </tr>
         <tr>
             <td>Parksensor vorne</td>
@@ -158,7 +158,7 @@
             <td><button type="button" id="tempolimit_ueberschritten_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
             <td><button type="button" id="tempolimit_ueberschritten_EQE"> <span>▶ Play</span></button></td>
-            <td><button type="button" id="tempolimit_ueberschritten_Model3"> <span>▶ Play</span></button></td>
+            <td></td>
         </tr>
         <tr>
             <td>Einsteigen</td>
@@ -172,13 +172,6 @@
             <td><button type="button" id="aussteigen_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
             <td><button type="button" id="aussteigen_EQE"> <span>▶ Play</span></button></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Kofferraum schließen</td>
-            <td><button type="button" id="kofferraum_schliessen_IONIQ6"> <span>▶ Play</span></button></td>
-            <td>-</td>
-            <td>-</td>
             <td></td>
         </tr>
        </tbody>
