--- a/Anwendung.html
+++ b/Anwendung.html
@@ -35,28 +35,28 @@
             <td><button type="button" id="FZ_ausschalten_MSD"> <span>▶ Play</span></button></td>
         </tr>
         <tr>
-            <td>Interatkionssound: Tippen</td>
+            <td>Interaktionssound: Tippen</td>
             <td><button type="button" id="tippen_IONIQ6"> <span>▶ Play</span></button></td>
             <td><button type="button" id="tippen_Polestar2"> <span>▶ Play</span></button></td>
             <td><button type="button" id="tippen_EQE"> <span>▶ Play</span></button></td>
             <td><button type="button" id="tippen_MSD"> <span>▶ Play</span></button></td>
         </tr>
         <tr>
-            <td>Interatkionssound: Scrollen</td>
+            <td>Interaktionssound: Scrollen</td>
             <td>-</td>
             <td>-</td>
             <td><button type="button" id="scrollen_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
-            <td>Interatkionssound: Scrollen Unternavigation</td>
+            <td>Interaktionssound: Scrollen Unternavigation</td>
             <td>-</td>
             <td>-</td>
             <td><button type="button" id="scrollen_Unternavigation_EQE"> <span>▶ Play</span></button></td>
             <td></td>
         </tr>
         <tr>
-            <td>Interatkionssound: Toggle</td>
+            <td>Interaktionssound: Toggle</td>
             <td>-</td>
             <td>-</td>
             <td><button type="button" id="toggle_EQE"> <span>▶ Play</span></button></td>
@@ -133,7 +133,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Tempolimit überschreiten</td>
+            <td>Tempolimit Überschreitung</td>
             <td><button type="button" id="tempolimit_ueberschritten_IONIQ6"> <span>▶ Play</span></button></td>
             <td>-</td>
             <td><button type="button" id="tempolimit_ueberschritten_EQE"> <span>▶ Play</span></button></td>
